kubernetes/heimdall/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall 
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: heimdall
        persistentVolumeClaim:
          claimName: heimdall-pvc
      containers:
      - image: linuxserver/heimdall:2.8.3
        name: heimdall
        imagePullPolicy: Always
        ports:
         - containerPort: 80
           name: http-80
           protocol: TCP
         - containerPort: 443
           name: https-443
           protocol: TCP
        volumeMounts:
         - mountPath: /config
           name: heimdall
           subPath: config
